--- a/src/style/style.css
+++ b/src/style/style.css
@@ -9,18 +9,45 @@ body,
 html {
     height: 100%;
     border: 2px solid black;
-    background-color: rgb(248, 241, 255);
+    background-color: rgb(240, 226, 255);
 }
 
 body {
     display: grid;
-    grid-template: 130px 1fr / clamp(100px, 20vw, 200px) 1fr;
+    grid-template: 130px 1fr / clamp(100px, 22vw, 200px) 1fr;
 }
 
-header{
+header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     grid-area: 1 / 1 / 2 / 3;
+    font-size: 2.5rem;
+    font-weight: bold;
 }
 
+.nav-bar {
+    background-color: rgb(235, 215, 255);
+    padding-inline: 15px;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    font-size: 1.2rem;
+    padding-block: 10px;
+    margin-block: 18px;
+    cursor: pointer;
+}
+
+.add-form {
+    display: none;
+    position: absolute;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
