Add todo delete logic

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -42,7 +42,7 @@ li {
     cursor: pointer;
 }
 
-.add-form {
+.form-container {
     display: none;
     position: absolute;
     position: absolute;
